# sirius

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: rust.yml
.scripts/: bench.sh  bench10.sh  bench_finder.py  build_markdown_profiling.py  build_profiling.py  mem_usage.py  mem_usage.sh
benches/: ivc_gate_scaling.rs  sangria_trivial.rs
benches/cyclefold_poseidon/: main.rs
benches/merkle/: main.rs
benches/poseidon/: main.rs
benches/sangria_poseidon/: main.rs
benches/sangria_trivial/: main.rs
benches/trivial/: main.rs
docs/: cyclefold_report.md
examples/: cli.rs  cyclefold_poseidon.rs  cyclefold_trivial.rs  fibonacci.rs  instances.rs  merkle.rs  merkle_ipa.rs  merkle_kzg.rs  my_circuit.rs  poseidon.rs  sangria_poseidon.rs  sangria_trivial.rs  sha256.rs
examples/cyclefold_trivial/: main.rs
examples/merkle/: circuit.rs  ipa.rs  kzg.rs  main.rs  mod.rs
examples/merkle/merkle_tree_gadget/: chip.rs  mod.rs  off_circuit.rs
examples/poseidon/: main.rs
examples/sangria_trivial/: main.rs
examples/sha256/: main.rs
examples/sha256/table16/: compression.rs  gates.rs  message_schedule.rs  mod.rs  spread_table.rs
examples/sha256/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
examples/sha256/table16/message_schedule/: schedule_gates.rs  schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
examples/trivial/: main.rs
src/: aux_gate.rs  commitment.rs  constants.rs  digest.rs  error.rs  fft.rs  lib.rs  main_gate.rs  mock_prover.rs  nifs.rs  plonk.rs  polynomial.rs  poseidon.rs  sps.rs  standard_gate.rs  step_circuit.rs  table.rs  transcript.rs  util.rs  utils.rs
src/examples/: fibonacci.rs
src/gadgets/: ecc.rs  mod.rs  poseidon_step_circuit.rs  util.rs  utils.rs
src/gadgets/ecc/: gate.rs  mod.rs  point.rs
src/gadgets/merkle_tree/: chip.rs  mod.rs  off_circuit.rs
src/gadgets/nonnative/: bn.rs  mod.rs
src/gadgets/nonnative/bn/: big_nat.rs  big_nat_mul_mod_chip.rs  big_uint.rs  mod.rs
src/gadgets/nonnative/bn/big_nat_mul_mod_chip/: mod.rs  tests.rs
src/gadgets/nonnative/bn/big_uint_mul_mod_chip/: mod.rs  tests.rs
src/ivc/: assigned_relaxed_plonk_instance.rs  consistency_marker_computation.rs  consistency_markers_computation.rs  cyclefold.rs  floor_planner.rs  fold_relaxed_plonk_instance_chip.rs  incrementally_verifiable_computation.rs  instance_computation.rs  instances_accumulator_computation.rs  mod.rs  public_params.rs  step_circuit.rs  step_folding_circuit.rs
src/ivc/cyclefold/: mod.rs  support_circuit.rs
src/ivc/cyclefold/incrementally_verifiable_computation/: mod.rs  public_params.rs
src/ivc/cyclefold/sfc/: input.rs  mod.rs  sangria_adapter.rs
src/ivc/cyclefold/sfc/input/: assigned.rs  mod.rs
src/ivc/cyclefold/support_circuit/: mod.rs  tiny_gate.rs
src/ivc/protogalaxy/: mod.rs
src/ivc/sangria/: consistency_markers_computation.rs  fold_relaxed_plonk_instance_chip.rs  incrementally_verifiable_computation.rs  instances_accumulator_computation.rs  mod.rs  public_params.rs  step_folding_circuit.rs
src/nifs/: mod.rs  protogalaxy.rs  tests.rs  vanilla.rs
src/nifs/protogalaxy/: accumulator.rs  mod.rs  poly.rs  pow_i.rs  tests.rs
src/nifs/protogalaxy/poly/: folded_trace.rs  folded_witness.rs  mod.rs
src/nifs/sangria/: accumulator.rs  mod.rs  tests.rs
src/nifs/tests/: mod.rs  one_round_test.rs  three_rounds_test.rs  zero_round_test.rs
src/nifs/vanilla/: accumulator.rs  mod.rs  tests.rs
src/plonk/: eval.rs  lookup.rs  mod.rs  permutation.rs  util.rs
src/polynomial/: expression.rs  folding_poly.rs  graph_evaluator.rs  grouped_poly.rs  lagrange.rs  mod.rs  monomial.rs  multi_polynomial.rs  sparse.rs  univariate.rs
src/poseidon/: mod.rs  poseidon_circuit.rs  poseidon_hash.rs  random_oracle.rs  spec.rs
src/table/: circuit_data.rs  circuit_runner.rs  constraint_system_metainfo.rs  mod.rs  new_tests.rs  tests.rs  witness_data.rs
src/util/: mock_prover.rs  mod.rs
