[package]
name = "sirius"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
halo2_proofs = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev" }
ff = "0.13"
group = "0.13"
sha3 = "0.10"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.3"
num-bigint = "0.4.3"
num-traits = "0.2.16"
digest = "0.10"

rand_core = { version = "0.6", default-features = false }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "v0.6.0", features = ["derive_serde"] }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", rev = "807f8f555313f726ca03bdf941f798098f488ba4" }
log = "0.4.20"
itertools = "0.11.0"
bitter = "0.6.1"
thiserror = "1.0.48"
serde_arrays = "0.1.0"

[dev-dependencies]
env_logger = "0.10.0"
prettytable-rs = "0.10.0"
test-log = "0.2.12"
halo2_gadgets = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev", features = ["unstable"] }
bincode = "1.3"
tempfile = "3.9.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
