[package]
name = "sirius"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
bitter = "0.6.1"
count-to-non-zero = "0.3.0"
digest = "0.10"
ff = "0.13"
group = "0.13"
halo2_proofs = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "v0.6.0", features = ["derive_serde"] }
itertools = "0.12.1"
num-bigint = "0.4.3"
num-traits = "0.2.16"
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", rev = "807f8f555313f726ca03bdf941f798098f488ba4" }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"
sha3 = "0.10"
some-to-err = "0.2.1"
thiserror = "1.0.48"
tracing = { version = "0.1.40", features = ["attributes"] }

[dev-dependencies]
prettytable-rs = "0.10.0"
tracing-test = "0.2.4"
halo2_gadgets = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev", features = ["unstable"] }
bincode = "1.3"
tempfile = "3.9.0"
tracing-subscriber = "0.3.18"
maplit = "1.0.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
