[package]
name = "sirius"
version = "0.1.0"
authors = [
    "chaosma chao@snarkify.io",
    "cyphersnake mikhail@snarkify.io",
]
repository = "https://github.com/snarkify/sirius"
description = "A Plonkish folding framework for Incrementally Verifiable Computation (IVC)."
keywords = [
    "cryptography",
    "ivc",
    "nova",
    "proof-system",
    "protogalaxy",
    "zero-knowledge-proofs",
    "zkp",
]
edition = "2021"
license = "MIT"

[dependencies]
bincode = "1.3"
bitter = "0.7.0"
count-to-non-zero = "0.3.0"
digest = "0.10"
itertools = "0.13.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"
sha3 = "0.10"
some-to-err = "0.2.1"
thiserror = "1.0.48"
tracing = { version = "0.1.40", features = ["attributes"] }

[dependencies.poseidon]
git = "https://github.com/privacy-scaling-explorations/poseidon"
rev = "807f8f555313f726ca03bdf941f798098f488ba4"

[dependencies.halo2_proofs]
git = "https://github.com/snarkify/halo2"
branch = "snarkify/dev.scroll.alpha.1"

[dev-dependencies]
bincode = "1.3"
clap = { version = "4.5.4", features = ["derive"] }
criterion = "0.5.1"
dhat = "0.3.3"
git2 = "0.19.0"
maplit = "1.0.2"
prettytable-rs = "0.10.0"
tempfile = "3.9.0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-test = "0.2.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]

[[bench]]
name = "trivial"
harness = false

[[bench]]
name = "poseidon"
harness = false

[features]
# Allows cli-example to check memory usage with dhat
dhat-heap = []
